fixed the spacing error

--- a/style.css
+++ b/style.css
@@ -2,3 +2,6 @@
     padding: 0;
     margin: 0 auto;
 }
+.w-30{
+    width: 30%;
+}
